@@ -1,6 +1,6 @@
 {
   "name": "simp-nfs",
-  "version": "7.4.0",
+  "version": "7.5.0",
   "author": "SIMP Team",
   "summary": "manages NFS server and client, also PKI and stunnelling",
   "license": "Apache-2.0",
@@ -16,23 +16,23 @@
   "dependencies": [
     {
       "name": "puppet/systemd",
-      "version_requirement": ">= 4.0.2 < 6.0.0"
+      "version_requirement": ">= 4.0.2 < 7.0.0"
     },
     {
-      "name": "herculesteam/augeasproviders_sysctl",
-      "version_requirement": ">= 2.4.0 < 3.0.0"
+      "name": "puppet/augeasproviders_sysctl",
+      "version_requirement": ">= 2.4.0 < 4.0.0"
     },
     {
       "name": "puppetlabs/concat",
-      "version_requirement": ">= 6.4.0 < 8.0.0"
+      "version_requirement": ">= 6.4.0 < 10.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 4.1.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "simp/svckill",
@@ -55,7 +55,7 @@
       },
       {
         "name": "simp/iptables",
-        "version_requirement": ">= 6.4.0 < 7.0.0"
+        "version_requirement": ">= 6.5.3 < 7.0.0"
       },
       {
         "name": "simp/stunnel",
@@ -105,7 +105,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
